--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,13 @@
 {
+  "parser": "@typescript-eslint/parser",
+  "extends": [
+    "plugin:@typescript-eslint/recommended",
+    "prettier/@typescript-eslint",
+    "plugin:prettier/recommended"
+  ],
+  "rules": {
+    "@typescript-eslint/no-explicit-any": 1
+  },
   "parserOptions": {
     "ecmaVersion": 2019,
     "sourceType": "module"
