--- a/package.json
+++ b/package.json
@@ -2,20 +2,27 @@
   "name": "puyo-spectator-assist-js",
   "version": "0.2.4",
   "scripts": {
-    "dev": "webpack-dev-server",
-    "build": "NODE_OPTIONS=\"--max-old-space-size=4096\" webpack --mode production"
+    "dev": "cross-env NODE_OPTIONS=--max_old_space_size=4096 webpack-dev-server",
+    "build": "cross-env NODE_OPTIONS=--max_old_space_size=4096 webpack --mode production"
   },
   "author": "s2lsoftener <s2@puyonexus.com>",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
     "@types/chrome": "^0.0.91",
+    "@typescript-eslint/eslint-plugin": "^2.12.0",
+    "@typescript-eslint/parser": "^2.12.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.3.2",
     "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "prettier": "^1.19.1",
     "style-loader": "^1.0.1",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
