--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@typescript-eslint/parser": "^2.12.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
+    "cross-env": "^6.0.3",
     "css-loader": "^3.3.2",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
