Got decent comparison histogram data in options.ts / skin-analyzer.ts
The Aqua Puyos generally have a 90%+ match with their own color, <70% match with the wrong colors. Yellow <-> Garbage nearly gets confused though, with ~85% matching.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,16 @@
 {
   "compilerOptions": {
-    "module": "es6",
+    "baseUrl": ".",
+    "paths": {
+      "@mjyc/opencv.js": ["src/@types/opencv.d.ts"]
+    },
+    "module": "commonjs",
     "target": "ES2019",
     "outDir": "./build/",
     "noImplicitAny": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true
   },
   "exclude": ["node_modules", "webpack.config.js"]
 }
