Using wasm opencv.js, which requires setting onRuntimeInitialized callback

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,11 @@
 {
   "name": "PuyoSpectatorAssist.js",
   "version": "0.2.4",
+  "permissions": [
+    "tabs",
+    "https://www.youtube.com/",
+    "https://www.twitch.tv/"
+  ],
   "options_page": "options.html",
   "background": {
     "page": "background.html"
@@ -8,6 +13,16 @@
   "browser_action": {
     "default_popup": "popup.html"
   },
+  "content_scripts": [
+    {
+      "matches": [
+        "https://www.youtube.com/*",
+        "https://www.twitch.tv/*"
+      ],
+      "js": ["opencv.js", "contentScript.js"],
+      "run_at": "document_end"
+    }
+  ],
   "manifest_version": 2,
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
