--- a/.eslintrc
+++ b/.eslintrc
@@ -1,18 +1,30 @@
 {
   "parser": "@typescript-eslint/parser",
+  "plugins": ["react-hooks"],
   "extends": [
+    "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
     "prettier/@typescript-eslint",
     "plugin:prettier/recommended"
   ],
   "rules": {
-    "@typescript-eslint/no-explicit-any": 1
+    "@typescript-eslint/no-explicit-any": 1,
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   },
   "parserOptions": {
     "ecmaVersion": 2019,
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
   "env": {
     "webextensions": true
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
