--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "puyo-spectator-assist-js",
   "version": "0.2.4",
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS=--max_old_space_size=4096 webpack-dev-server",
-    "build": "cross-env NODE_OPTIONS=--max_old_space_size=4096 webpack --mode production"
+    "dev": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 webpack-dev-server --mode development",
+    "build": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 webpack --mode production"
   },
   "author": "s2lsoftener <s2@puyonexus.com>",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
     "@types/chrome": "^0.0.91",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -18,9 +20,12 @@
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.19.1",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.1",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.5.4",
@@ -31,6 +36,8 @@
     "write-file-webpack-plugin": "^4.5.1"
   },
   "dependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "s2-puyosim-core": "^0.3.0"
   }
 }
