--- a/src/manifest.json
+++ b/src/manifest.json
@@ -24,5 +24,8 @@
     }
   ],
   "manifest_version": 2,
+  "web_accessible_resources": [
+    "opencv.js"
+  ],
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
