--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "sourceMap": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "jsx": "react"
   },
   "exclude": ["node_modules", "webpack.config.js"]
 }
